sashmaybe fix dark mode.. again

--- a/tnnt_templates/static/sash/scss/bootstrap/_bootstrap-styles.scss
+++ b/tnnt_templates/static/sash/scss/bootstrap/_bootstrap-styles.scss
@@ -4,9 +4,9 @@
     --primary-bg-color: #6c5ffc;
     --primary-bg-hover: #233ac5;
     --primary-bg-border: #5161c1;
-    --dark-body: #292e4a;
-    --dark-border: #30314e;
-    --dark-primary: #6c5ffc;
+    --dark-body: #222;
+    --dark-border: #ccc;
+    --dark-primary: #444;
     --transparent-primary: #6c5ffc;
     --transparent-body: #584cd9;
     --transparent-theme: rgba(0, 0, 0, 0.2);
